syntax = "proto3";

option go_package = "qmq/qmq";
package qmq;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message Message {
    string id = 1;
    string from = 2;
    string to = 3;
    string subject = 4;
    google.protobuf.Any content = 5;
}

message WebServiceGetRequest {
    string key = 1;
}

message WebServiceGetResponse {
    string key = 1;
    google.protobuf.Any value = 2;
}

message WebServiceNotification {
    string key = 1;
    google.protobuf.Any value = 2;
}

message WebServiceSetRequest {
    string key = 1;
    google.protobuf.Any value = 2;
}

message WebServiceSetResponse {
}

message Data {
    google.protobuf.Any data = 1;
    string writer = 2;
    google.protobuf.Timestamp writetime = 3;
}

message Int {
    int64 value = 1;
}

message String {
    string value = 1;
}

message Timestamp {
    google.protobuf.Timestamp value = 1;
}

message Float {
    double value = 1;
}

message Bool {
    bool value = 1;
}

enum LogLevelEnum {
    LOG_LEVEL_UNSPECIFIED = 0;
    LOG_LEVEL_TRACE = 1;
    LOG_LEVEL_DEBUG = 2;
    LOG_LEVEL_ADVISE = 3;
    LOG_LEVEL_WARN = 4;
    LOG_LEVEL_ERROR = 5;
    LOG_LEVEL_PANIC = 6;
}

message Log {
    string application = 1;
    LogLevelEnum level = 2;
    string message = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message StreamContext {
    string last_consumed_id = 1;
    string last_produced_id = 2;
    int64 total_consumed = 3;
    int64 total_produced = 4;
}

message Prayer {
    string name = 1;
    google.protobuf.Timestamp time = 2;
}

message AudioRequest {
    string filename = 1;
}

message MqttMessage {
    uint32 id = 1;
    int32 qos = 2;
    string topic = 3;
    bytes payload = 4;
    bool retained = 5;
    bool duplicate = 6;
}

enum ConnectionStateEnum {
    CONNECTION_STATE_UNSPECIFIED = 0;
    CONNECTION_STATE_CONNECTED = 1;
    CONNECTION_STATE_DISCONNECTED = 2;
}

enum GarageDoorStateEnum {
    GARAGE_DOOR_STATE_UNSPECIFIED = 0;
    GARAGE_DOOR_STATE_OPEN = 1;
    GARAGE_DOOR_STATE_CLOSED = 2;
}

message GarageDoorState {
    GarageDoorStateEnum value = 1;
}

message ConnectionState {
    ConnectionStateEnum value = 1;
}